--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -72,6 +72,11 @@
     <dimen name="contact_chat_msg">16sp</dimen>
     
     <dimen name="album_list_bottom_title">20sp</dimen>
+    <dimen name="album_item_check_spacing">10dp</dimen>
     <dimen name="album_action_bar_title">16sp</dimen>
+    
+    <dimen name="file_explorer_desc_text_margin_left">20dp</dimen>
+    <dimen name="file_explorer_back_horizontal_spacing">2dp</dimen>
+    <dimen name="file_explorer_back_vertical_spacing">4dp</dimen>
     
 </resources>
