--- a/res/drawable/chat_btn_make_voice_selector.xml
+++ b/res/drawable/chat_btn_make_voice_selector.xml
@@ -3,6 +3,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/chat_btn_make_voice_background_pressed" android:state_selected="true" />
     <item android:drawable="@drawable/chat_btn_make_voice_background_pressed" android:state_pressed="true" />
-    <item android:drawable="@drawable/chat_btn_make_voice_background_pressed" android:state_checked="true" />
+    <item android:drawable="@drawable/chat_btn_make_voice_background_pressed" android:state_focused="true" />
     <item android:drawable="@drawable/chat_btn_make_voice_background_normal" />
 </selector>
