--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item type="id" name="lv_data" />
     <item type="id" name="pb_loading" />
+    <item type="id" name="tv_content" />
 </resources>
