--- a/res/layout/activity_photo_preview.xml
+++ b/res/layout/activity_photo_preview.xml
@@ -13,7 +13,7 @@
         android:id="@+id/layout_bottom" 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/album_bottom_layout_bg"
+        android:background="@color/action_bar_color"
         android:layout_gravity="bottom">
         <CheckBox 
             android:id="@+id/cb_original_image"
