--- a/res/layout/item_audio.xml
+++ b/res/layout/item_audio.xml
@@ -48,7 +48,7 @@
             android:layout_weight="1"
             android:singleLine="true"/>
         <TextView 
-            android:id="@+id/tv_content"
+            android:id="@id/tv_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
