--- a/res/layout/item_file_attach.xml
+++ b/res/layout/item_file_attach.xml
@@ -46,7 +46,7 @@
             android:singleLine="true"/>
         
         <TextView 
-            android:id="@+id/tv_content"
+            android:id="@id/tv_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
