--- a/res/values/drawables.xml
+++ b/res/values/drawables.xml
@@ -9,5 +9,6 @@
 
     <drawable name="transparent">#00000000</drawable>
     
+    <drawable name="action_bar_bg">@color/action_bar_color</drawable>
     
 </resources>
