--- a/res/drawable/text_index_background.xml
+++ b/res/drawable/text_index_background.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <gradient android:startColor="#888888" android:endColor="#888888" android:angle="90.0" />
-    
-    <corners
-        android:topLeftRadius="2dip"
-        android:bottomLeftRadius="2dip"/>
-
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval" >
+    <gradient android:startColor="#888888" android:endColor="#888888" />
 </shape>
