--- a/res/layout/activity_search_friend.xml
+++ b/res/layout/activity_search_friend.xml
@@ -3,12 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/activity_vertical_margin"
     android:background="@android:color/white" >
-    
+    <include layout="@layout/com_toolbar"/>
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="@dimen/activity_vertical_margin"
         android:orientation="horizontal">
         <EditText 
 	        android:id="@+id/et_username"
@@ -28,12 +28,14 @@
     </LinearLayout>
     <ListView 
         android:id="@+id/lv_result"
-        style="@style/CommonListViewStyle"/>
+        style="@style/CommonListViewStyle"
+        android:padding="@dimen/activity_vertical_margin"/>
 
     <TextView 
         android:id="@+id/empty_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="@dimen/activity_vertical_margin"
         android:text="@string/no_result"
         android:gravity="center"
         android:visibility="gone"/>
