--- a/res/layout/layout_loading.xml
+++ b/res/layout/layout_loading.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge 
+<com.example.chat.view.ProgressWheel
+    xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res/com.example.chat"    
+    android:id="@id/pb_loading"
+    android:layout_width="@dimen/progress_wheel_size"
+    android:layout_height="@dimen/progress_wheel_size"
+    android:layout_centerHorizontal="true"
+    android:layout_gravity="center"
+    app:matProg_fillRadius="true"
+    app:matProg_barColor="?attr/colorPrimary" 
+    app:matProg_progressIndeterminate="true"/>
+<!-- <merge 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -12,5 +23,5 @@
 	    android:layout_gravity="center" >
 	
 	</ProgressBar>
-</merge>
+</merge> -->
 
