--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,27 +1,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
 
     <item
         android:id="@+id/action_search"
         android:title="@string/action_search"
-        android:icon="@drawable/abc_ic_search"
-        android:showAsAction="ifRoom"/>
+        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
+        app:showAsAction="ifRoom"/>
     
    	<item
         android:id="@+id/action_create_group_chat"
         android:title="@string/action_create_group_chat"
         android:icon="@drawable/abc_ic_group_chat"
-        android:showAsAction="withText"/>
+        app:showAsAction="withText"/>
     <item
         android:id="@+id/action_add_friend"
         android:title="@string/action_add_friend"
         android:icon="@drawable/abc_ic_add_friend"
-        android:showAsAction="withText"/>
+        app:showAsAction="withText"/>
     <item
         android:id="@+id/action_exit"
         android:title="@string/action_exit"
         android:icon="@drawable/abc_ic_exit"
-        android:showAsAction="withText"/>
+        app:showAsAction="withText"/>
     
     <!-- <item 
         android:id="@+id/action_plus"
