修改全局菜单

--- a/res/layout/activity_file_explorer.xml
+++ b/res/layout/activity_file_explorer.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@android:color/white">
+    <include layout="@layout/com_toolbar"/>
     <TextView 
         android:id="@+id/back_view"
         android:layout_width="match_parent"
