--- a/res/layout/activity_album.xml
+++ b/res/layout/activity_album.xml
@@ -1,60 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/album_take_pic_bg_selector" >
-    
-    <GridView 
-        android:id="@+id/gv_photo"
-        style="@style/CommonListViewStyle"
-        android:verticalSpacing="1dp"
-        android:horizontalSpacing="1dp"
-        android:gravity="center"
-        android:stretchMode="columnWidth"
-        android:fadingEdge="none"
-        android:numColumns="3"/>
-    
-    <TextView 
-        android:id="@+id/tv_time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
-        android:layout_alignParentTop="true"
-        android:textSize="@dimen/session_list_item_title"
-        android:padding="@dimen/album_list_time_vertical_spcaing"
-        android:background="@color/album_top_layout_bg"
-        android:visibility="gone"/>
-    
-    <ProgressBar 
-        android:id="@id/pb_loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="?android:attr/progressBarStyleLargeInverse"
-        android:layout_centerInParent="true"
-        android:layout_gravity="center"/>
-    
-    <RelativeLayout
-        android:id="@+id/layout_bottom" 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="?attr/colorPrimary">
-        <TextView 
-            android:id="@+id/tv_all_photo"
-            style="@style/AlbumBottomTitleStyle"
-            android:text="@string/album_all_photo"
-            android:background="@drawable/album_all_pic_bg_selector"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:clickable="true"/>
-        <TextView 
-            android:id="@+id/tv_preview"
-            style="@style/AlbumBottomTitleStyle"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:text="@string/album_preview_photo"
-            android:enabled="false"
-            android:clickable="true"/>
-    </RelativeLayout>
-
-</RelativeLayout>
+    android:orientation="vertical">
+    <include layout="@layout/com_toolbar"/>
+	<RelativeLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:background="@drawable/album_take_pic_bg_selector" >
+	    
+	    <GridView 
+	        android:id="@+id/gv_photo"
+	        style="@style/CommonListViewStyle"
+	        android:verticalSpacing="1dp"
+	        android:horizontalSpacing="1dp"
+	        android:gravity="center"
+	        android:stretchMode="columnWidth"
+	        android:fadingEdge="none"
+	        android:numColumns="3"/>
+	    
+	    <TextView 
+	        android:id="@+id/tv_time"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:textColor="@android:color/white"
+	        android:layout_alignParentTop="true"
+	        android:textSize="@dimen/session_list_item_title"
+	        android:padding="@dimen/album_list_time_vertical_spcaing"
+	        android:background="@color/album_top_layout_bg"
+	        android:visibility="gone"/>
+	    
+	    <ProgressBar 
+	        android:id="@id/pb_loading"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        style="?android:attr/progressBarStyleLargeInverse"
+	        android:layout_centerInParent="true"
+	        android:layout_gravity="center"/>
+	    
+	    <RelativeLayout
+	        android:id="@+id/layout_bottom" 
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentBottom="true"
+	        android:background="?attr/colorPrimary">
+	        <TextView 
+	            android:id="@+id/tv_all_photo"
+	            style="@style/AlbumBottomTitleStyle"
+	            android:text="@string/album_all_photo"
+	            android:background="@drawable/album_all_pic_bg_selector"
+	            android:layout_alignParentLeft="true"
+	            android:layout_alignParentStart="true"
+	            android:clickable="true"/>
+	        <TextView 
+	            android:id="@+id/tv_preview"
+	            style="@style/AlbumBottomTitleStyle"
+	            android:layout_alignParentRight="true"
+	            android:layout_alignParentEnd="true"
+	            android:text="@string/album_preview_photo"
+	            android:enabled="false"
+	            android:clickable="true"/>
+	    </RelativeLayout>
+	
+	</RelativeLayout>
+</LinearLayout>
