--- a/res/layout/layout_common_list.xml
+++ b/res/layout/layout_common_list.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
-	<ListView
-	    android:id="@id/lv_data"
-	    style="@style/CommonListViewStyle" />
+    android:orientation="vertical">
+    <include layout="@layout/com_toolbar"/>
+	<FrameLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:background="@android:color/white">
+		<ListView
+		    android:id="@id/lv_data"
+		    style="@style/CommonListViewStyle" />
+		
+		<include 
+		    layout="@layout/layout_empty"/>
+		
+		<include layout="@layout/layout_loading"/>
 	
-	<include 
-	    layout="@layout/layout_empty"/>
-	
-	<include layout="@layout/layout_loading"/>
-
-</FrameLayout>
+	</FrameLayout>
+</LinearLayout>
