--- a/res/layout/layout_record_voice.xml
+++ b/res/layout/layout_record_voice.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/record_root_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:layout_gravity="center"
+    android:visibility="gone" >
     <LinearLayout
         android:id="@+id/layout_voice_recording"
         android:layout_width="match_parent"
@@ -26,6 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15.0dip"
                 android:layout_marginRight="4.0dip"
+                android:layout_marginEnd="4.0dp"
                 android:contentDescription="@null"
                 android:src="@drawable/voice_rcd_hint" />
 
@@ -46,6 +51,7 @@
             android:layout_width="30.0dip"
             android:layout_height="30.0dip"
             android:layout_marginLeft="10.0dip"
+            android:layout_marginStart="10.0dp"
             android:background="@drawable/voice_rcd_cancel_bg"
             android:padding="7.0dip"
             android:contentDescription="@null"
@@ -55,9 +61,10 @@
             android:id="@+id/layout_del_record"
             android:layout_width="140.0dip"
             android:layout_height="140.0dip"
-            android:background="@drawable/voice_rcd_cancel_bg_focused"
+            android:background="@drawable/chat_record_cancel_bg_selector"
             android:gravity="center"
             android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:orientation="vertical"
             android:visibility="gone" ><!-- android:visibility="gone" -->
 
@@ -85,6 +92,7 @@
         android:layout_height="140.0dip"
         android:background="@drawable/voice_rcd_hint_bg"
         android:gravity="center"
+        android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:orientation="horizontal"
         android:visibility="gone" ><!-- android:visibility="gone" -->
@@ -102,7 +110,7 @@
         android:layout_height="140.0dip"
         android:background="@drawable/voice_rcd_hint_bg"
         android:gravity="center"
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
         android:orientation="vertical"
         android:visibility="gone"><!-- android:visibility="gone"  -->
 
@@ -120,4 +128,4 @@
             android:textColor="#ffffff" />
     </LinearLayout>
 
-</merge>
+</RelativeLayout>
