--- a/res/layout/item_chat_msg_in.xml
+++ b/res/layout/item_chat_msg_in.xml
@@ -18,26 +18,45 @@
 	        android:layout_alignParentLeft="true"
 	        android:layout_alignParentStart="true"
 	        android:contentDescription="@null" />
-
-        <TextView
-            android:id="@id/tv_content"
-            style="@style/ChatItemContentStyle"
-            android:paddingLeft="@dimen/chat_msg_item_in_content_padding_left"
-            android:paddingStart="@dimen/chat_msg_item_in_content_padding_left"
-            android:paddingRight="@dimen/chat_msg_item_in_content_padding_right"
-            android:paddingEnd="@dimen/chat_msg_item_in_content_padding_right"
-	        android:layout_marginLeft="@dimen/chat_msg_item_content_margin_left_right"
-	        android:layout_marginStart="@dimen/chat_msg_item_content_margin_left_right"
-	        android:layout_toEndOf="@id/iv_head_icon"
+		<RelativeLayout
+		    android:id="@+id/content_layout" 
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/iv_head_icon"
 	        android:layout_toRightOf="@id/iv_head_icon"
-	        android:layout_alignTop="@id/iv_head_icon"/>
+	        android:layout_alignTop="@id/iv_head_icon"
+	        android:gravity="center_horizontal">
+	        <TextView
+	            android:id="@id/tv_content"
+	            style="@style/ChatItemContentStyle"
+	            android:paddingLeft="@dimen/chat_msg_item_in_content_padding_left"
+	            android:paddingStart="@dimen/chat_msg_item_in_content_padding_left"
+	            android:paddingRight="@dimen/chat_msg_item_in_content_padding_right"
+	            android:paddingEnd="@dimen/chat_msg_item_in_content_padding_right"
+		        android:layout_marginLeft="@dimen/chat_msg_item_content_margin_left_right"
+		        android:layout_marginStart="@dimen/chat_msg_item_content_margin_left_right"
+		        android:autoLink="all"
+		        android:textColorLink="?attr/colorPrimary"
+		        android:linksClickable="true"/>
+	        
+	        <TextView 
+                android:id="@+id/tv_content_desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/chat_location_desc_bg"
+                android:layout_alignBottom="@id/tv_content"
+                android:textColor="@android:color/white"
+                android:gravity="center"
+                android:singleLine="true"
+                android:visibility="gone"/>
+        </RelativeLayout>
         
         <ImageView 
             android:id="@+id/iv_msg_state"
             style="@style/ChatItemSendStateStyle"
-            android:layout_toEndOf="@id/tv_content"
-            android:layout_toRightOf="@id/tv_content"
-            android:layout_alignBottom="@id/tv_content"
+            android:layout_toEndOf="@id/content_layout"
+            android:layout_toRightOf="@id/content_layout"
+            android:layout_alignBottom="@id/content_layout"
             android:layout_marginLeft="@dimen/chat_msg_item_send_state_margin_left_right"
             android:layout_marginStart="@dimen/chat_msg_item_send_state_margin_left_right"
             android:contentDescription="@null"/>
