--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -17,6 +17,8 @@
     <color name="session_list_item_content">#999999</color>
     <color name="session_list_item_time">#99888888</color>
     
+    <color name="chat_location_desc_bg">#99000000</color>
+    
     <color name="list_selector">#26999999</color>
     
     <color name="divider_color">#aaaaaa</color>
