--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -153,6 +153,7 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:cacheColorHint">@android:color/transparent</item>
         <item name="android:listSelector">@drawable/common_list_selector</item>
+        <item name="android:animateLayoutChanges">true</item>
         <item name="android:fastScrollEnabled">true</item>
     </style>
     
