--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -39,4 +39,18 @@
     <color name="pager_tab_indicator_color">#FF33B5E5</color>
     <color name="pager_tab_text_selected_color">#FF33B5E5</color>
     
+    <!--<color name="content_light">#5E5E5E</color>-->
+    <!--<color name="content_dark">#EDEDED</color>-->
+    <!--<color name="item_light">#535353</color>-->
+    <!--<color name="item_dark">#EDEDED</color>-->
+    <!--<color name="button_light">#3C3C3D</color>-->
+    <!--<color name="button_dark">#FFFFFF</color>-->
+
+    <color name="md_divider_black">#10000000</color>
+    <color name="md_divider_white">#10FFFFFF</color>
+
+    <color name="md_material_blue_600">#1E88E5</color>
+    <color name="md_material_blue_800">#1565C0</color>
+    
+    
 </resources>
