--- a/res/layout/progress_dialog_holo.xml
+++ b/res/layout/progress_dialog_holo.xml
@@ -16,26 +16,28 @@
 ** limitations under the License.
 */
 -->
-
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout android:id="@+id/body"
+    <LinearLayout
+        android:id="@+id/body"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:baselineAligned="false"
-        android:padding="16dip">
+        android:padding="16dp"
+        android:baselineAligned="false">
 
-        <ProgressBar android:id="@android:id/progress"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:max="10000"
-            android:layout_marginEnd="16dip" />
+        <!-- This can of course also be a regular indeterminate ProgressBar, but then it won't be styled -->
+        <net.ibaixin.chat.view.ProgressWheel
+            android:id="@+id/progress"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
+            android:layout_marginEnd="@dimen/alert_dialog_padding_material"
+            android:layout_marginRight="@dimen/alert_dialog_padding_material" />
 
-        <TextView android:id="@+id/message"
+        <TextView
+            android:id="@+id/message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical" />
