--- a/res/layout/activity_test.xml
+++ b/res/layout/activity_test.xml
@@ -5,77 +5,38 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <include layout="@layout/com_toolbar"/>
-    <RelativeLayout
+    <ScrollView
 	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:fitsSystemWindows="true"
-	    android:orientation="vertical" >
-	    <EditText
-				android:id="@+id/et_content"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:maxLines="3"
-				android:gravity="center_vertical"
-				android:layout_alignParentBottom="true"
-				android:hint="@string/chat_msg_edit_hint"/>
-		    
-		    <ListView 
-		        android:id="@+id/lv_msgs"
-		        android:layout_width="match_parent"
-		        android:layout_height="match_parent"
-		        android:layout_above="@id/et_content"
-		        android:cacheColorHint="@android:color/transparent"
-		        android:listSelector="@android:color/transparent"
-		        android:divider="@android:color/transparent"/>
-	    <!-- <include layout="@layout/com_toolbar"/> -->
-	    <!-- <RelativeLayout 
-		    android:layout_width="match_parent"
-		    android:layout_height="match_parent"
-		    android:layout_below="@id/toolbar">
-		    <EditText
-				android:id="@+id/et_content"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:maxLines="3"
-				android:gravity="center_vertical"
-				android:layout_alignParentBottom="true"
-				android:hint="@string/chat_msg_edit_hint"/>
-		    
-		    <ListView 
-		        android:id="@+id/lv_msgs"
-		        android:layout_width="match_parent"
-		        android:layout_height="match_parent"
-		        android:layout_above="@id/et_content"
-		        android:cacheColorHint="@android:color/transparent"
-		        android:listSelector="@android:color/transparent"
-		        android:divider="@android:color/transparent"/>
-		</RelativeLayout> -->
-	    
-	    <!-- <include layout="@layout/com_toolbar"/> -->
-	    
-	    <!-- <LinearLayout 
+	    android:layout_height="wrap_content">
+	
+	    <LinearLayout
+	        android:orientation="vertical"
 	        android:layout_width="match_parent"
-	        android:layout_height="match_parent"
-	        android:orientation="vertical">
-	        <ListView 
-		        android:id="@+id/lv_msgs"
-		        android:layout_width="match_parent"
-		        android:layout_height="0dp"
-		        android:cacheColorHint="@android:color/transparent"
-		        android:listSelector="@android:color/transparent"
-		        android:divider="@android:color/transparent"
-		        android:layout_weight="1"/>
-		    
-		    <EditText
-		          android:id="@+id/et_content"
-		          android:layout_width="match_parent"
-		          android:layout_height="wrap_content"
-		          android:maxLines="3"
-		          android:gravity="center_vertical"
-		          android:hint="@string/chat_msg_edit_hint"/>
-	        
-	    </LinearLayout> -->
-	    
-	</RelativeLayout>
+	        android:layout_height="wrap_content"
+	        android:padding="@dimen/activity_horizontal_margin">
+	
+	        <Button
+	            android:id="@+id/basicNoTitle"
+	            android:layout_width="match_parent"
+	            android:layout_height="56dp"
+	            android:text="没有标题" />
+	
+	        <Button
+	            android:id="@+id/basic"
+	            android:layout_width="match_parent"
+	            android:layout_height="56dp"
+	            android:text="基本标题"
+	            android:layout_marginTop="10dp" />
+	
+	        <Button
+	            android:id="@+id/basicLongContent"
+	            android:layout_width="match_parent"
+	            android:layout_height="56dp"
+	            android:text="基本内容成文本"
+	            android:layout_marginTop="10dp" />
+	
+	    </LinearLayout>
+	
+	</ScrollView>
 </LinearLayout>
 
