--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -24,4 +24,11 @@
 		<item>标识</item>
     </string-array>
     
+    <string-array name="chat_msg_context_menu">
+        <item>复制</item>
+        <item>转发</item>
+        <item>删除</item>
+        <item>更多</item>
+    </string-array>
+    
 </resources>
