--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -39,6 +39,7 @@
     <color name="pager_tab_indicator_color">#FF33B5E5</color>
     <color name="pager_tab_text_selected_color">#FF33B5E5</color>
     
+    <!-- material-dialogs对话框颜色值 -->
     <!--<color name="content_light">#5E5E5E</color>-->
     <!--<color name="content_dark">#EDEDED</color>-->
     <!--<color name="item_light">#535353</color>-->
