--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -28,6 +28,7 @@
     <dimen name="contact_item_head_icon_height">48dp</dimen>
     <dimen name="contact_text_index_padding_top">5dp</dimen>
     
+    <!-- material-dialogs -->
     <!-- See http://www.google.com/design/spec/components/dialogs.html#dialogs-specs -->
     <!-- Margin around the dialog, excluding the button bar -->
     <dimen name="md_dialog_frame_margin">24dp</dimen>
@@ -44,17 +45,18 @@
     <!-- 16dp - 4dp (inset) -->
     <dimen name="md_button_padding_frame_side">12dp</dimen>
     <dimen name="md_neutral_button_margin">12dp</dimen>
-    <!-- Applied to content scrollview/listview and customview, the spec calls for 16dp between the
+    <!--
+            Applied to content scrollview/listview and customview, the spec calls for 16dp between the
              bottom of the content and the top of the button bar, we split this between the two for
              ease of layouts and adjustments. Likewise the spec implies 16dp between the title and
              content and we split that as well.
 
              Splitting makes it easier to have consistent padding against the dividers.
-             -->
+    -->
     <dimen name="md_content_vertical_padding">8dp</dimen>
     <dimen name="md_button_frame_vertical_padding">8dp</dimen>
     <dimen name="md_button_height">48dp</dimen>
-    <dimen name="md_title_textsize">20sp</dimen>
+    <dimen name="md_title_textsize">22sp</dimen>
     <dimen name="md_content_textsize">18sp</dimen>
     <dimen name="md_button_textsize">14sp</dimen>
     <dimen name="md_listitem_textsize">18sp</dimen>
@@ -63,6 +65,9 @@
     <dimen name="md_icon_margin">16dp</dimen>
     <dimen name="md_listitem_margin_left">24dp</dimen>
     <dimen name="md_action_corner_radius">2dp</dimen>
+
+    <dimen name="md_progressdialog_paddingwithtitle">4dp</dimen>
+    
     <dimen name="contact_text_index_padding_bottom">5dp</dimen>
     
     <dimen name="chat_edit_panel_padding">4dp</dimen>
