--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -11,6 +11,85 @@
         <item name="colorPrimaryDark">@color/primary_color</item>
         <item name="colorPrimary">@color/primary_color</item>
         <item name="colorAccent">@color/primary_color</item>
+        
+        <!-- 自定义对话框样式 -->
+        <!--
+	        All dialogs will default to Theme.DARK with this set to true.
+	    -->
+	    <item name="md_dark_theme">false</item>
+	
+	    <!--
+	        By default, the title text color is derived from the
+	        ?android:textColorPrimary system attribute.
+	    -->
+	    <item name="md_title_color">?attr/colorPrimary</item>
+	
+	
+	    <!--
+	        By default, the content text color is derived from the
+	        ?android:textColorSecondary system attribute.
+	    -->
+	    <!-- <item name="md_content_color">#9C27B0</item> -->
+	
+	
+	    <!--
+	        By default, the positive action text color is derived
+	        from the colorAccent attribute of AppCompat or android:colorAccent
+	        attribute of the Material theme.
+	    -->
+	    <item name="md_positive_color">?attr/colorPrimary</item>
+	
+	    <!--
+	        By default, the positive action text color is derived
+	        from the colorAccent attribute of AppCompat or android:colorAccent
+	        attribute of the Material theme.
+	    -->
+	    <item name="md_neutral_color">?android:textColorPrimary</item>
+	
+	    <!--
+	        By default, the positive action text color is derived
+	        from the colorAccent attribute of AppCompat or android:colorAccent
+	        attribute of the Material theme.
+	    -->
+	    <item name="md_negative_color">?android:textColorPrimary</item>
+	
+	    <!--
+	        By default, the list item text color is black for the light
+	        theme and white for the dark theme.
+	    -->
+	    <!-- <item name="md_item_color">#9C27B0</item> -->
+	
+	    <!--
+	        This overrides the color used for the top and bottom dividers used when
+	        content is scrollable
+	    -->
+	    <item name="md_divider_color">@color/divider_color</item>
+	
+	    <!--
+	        This overrides the selector used on list items.
+	    -->
+	    <item name="md_list_selector">@drawable/common_list_selector</item>
+	
+	    <!--
+	        This overrides the selector used on stacked action buttons.
+	    -->
+	    <item name="md_btn_stacked_selector">@drawable/common_list_selector</item>
+	
+	    <!--
+	        This overrides the background selector used on the positive action button.
+	    -->
+	    <item name="md_btn_positive_selector">@drawable/common_list_selector</item>
+	
+	    <!--
+	        This overrides the background selector used on the neutral action button.
+	    -->
+	    <item name="md_btn_neutral_selector">@drawable/common_list_selector</item>
+	
+	    <!--
+	        This overrides the background selector used on the negative action button.
+	    -->
+	    <item name="md_btn_negative_selector">@drawable/common_list_selector</item>
+        
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
