--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -24,6 +24,11 @@
 		<item>标识</item>
     </string-array>
     
+    <string-array name="contact_list_context_menu">
+        <item>@string/contact_list_content_menu_set_nickname</item>
+        <item>@string/delete</item>
+    </string-array>
+    
     <string-array name="chat_msg_context_menu">
         <item>复制</item>
         <item>转发</item>
