--- a/res/layout/fragment_mine.xml
+++ b/res/layout/fragment_mine.xml
@@ -3,10 +3,188 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@android:color/white" >
-	<TextView 
+    android:background="@color/default_bgcolor" >
+	<RelativeLayout
+	    android:id="@+id/item_mine"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
-	    android:text="我的设置"/>    
+	    android:layout_marginTop="5dp"
+	    android:layout_marginBottom="5dp"
+	    android:background="@drawable/item_background"
+	    android:paddingTop="5dp"
+	    android:paddingBottom="5dp">
+		<ImageView
+		    android:id="@+id/item_mine_photo"
+		    android:layout_width="70dp"
+		    android:layout_height="70dp"
+		    android:layout_marginLeft="10dp"
+		    android:layout_marginRight="10dp"
+		    android:background="@drawable/item_ico_background"
+		    android:src="@drawable/ic_launcher"
+		    />
+		<LinearLayout
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:orientation="vertical"
+		    android:layout_centerVertical="true"
+		    android:layout_toRightOf="@id/item_mine_photo"
+		    >
+		    <TextView
+		        android:id="@+id/mine_nickname"
+		        android:layout_width="wrap_content"
+		    	android:layout_height="wrap_content"
+		    	android:layout_marginBottom="10dp"
+		    	android:text="百信逗友"/>
+		    <TextView
+		        android:id="@+id/mine_account"
+		        android:layout_width="wrap_content"
+		    	android:layout_height="wrap_content"
+		    	android:text="账号：ibaixin_12456"/>
+		</LinearLayout>
+		<ImageView
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_marginRight="5dp"
+		    android:layout_centerVertical="true"
+		    android:layout_alignParentRight="true"
+		    android:src="@drawable/item_click_abale"
+		    />
+	</RelativeLayout>
 
+	<RelativeLayout
+	    android:id="@+id/item_readjokestext"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_marginTop="5dp"
+	    android:layout_marginBottom="5dp"
+	    android:background="@drawable/item_background"
+	    android:paddingTop="5dp"
+	    android:paddingBottom="5dp">
+		<ImageView
+		    android:id="@+id/item_readjokestext_ico"
+		    android:layout_width="30dp"
+		    android:layout_height="30dp"
+		    android:layout_marginLeft="10dp"
+		    android:layout_marginRight="10dp"
+		    android:background="@drawable/item_ico_background"
+		    android:src="@drawable/item_readjokestext_ico"
+		    />
+		<TextView 
+		        android:layout_width="wrap_content"
+		    	android:layout_height="wrap_content"
+		    	android:layout_toRightOf="@id/item_readjokestext_ico"
+		    	android:layout_centerVertical="true"
+		    	android:text="@string/item_readjokestext"/>
+		
+		<ImageView 
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_marginRight="5dp"
+		    android:layout_centerVertical="true"
+		    android:layout_alignParentRight="true"
+		    android:src="@drawable/item_click_abale"
+		    />
+		</RelativeLayout>
+	<RelativeLayout
+	    android:id="@+id/item_readjokesimg"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_marginTop="5dp"
+	    android:layout_marginBottom="5dp"
+	    android:background="@drawable/item_background"
+	    android:paddingTop="5dp"
+	    android:paddingBottom="5dp">
+		<ImageView
+		    android:id="@+id/item_readjokesimg_ico"
+		    android:layout_width="30dp"
+		    android:layout_height="30dp"
+		    android:layout_marginLeft="10dp"
+		    android:layout_marginRight="10dp"
+		    android:background="@drawable/item_ico_background"
+		    android:src="@drawable/item_readjokesimg_ico"
+		    />
+		<TextView 
+		        android:layout_width="wrap_content"
+		    	android:layout_height="wrap_content"
+		    	android:layout_toRightOf="@id/item_readjokesimg_ico"
+		    	android:layout_centerVertical="true"
+		    	android:text="@string/item_readjokesimg"/>
+		
+		<ImageView 
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_marginRight="5dp"
+		    android:layout_centerVertical="true"
+		    android:layout_alignParentRight="true"
+		    android:src="@drawable/item_click_abale"
+		    />
+		</RelativeLayout>
+	<RelativeLayout
+	    android:id="@+id/item_readjokeslife"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_marginTop="5dp"
+	    android:layout_marginBottom="5dp"
+	    android:background="@drawable/item_background"
+	    android:paddingTop="5dp"
+	    android:paddingBottom="5dp">
+		<ImageView
+		    android:id="@+id/item_readjokeslife_ico"
+		    android:layout_width="30dp"
+		    android:layout_height="30dp"
+		    android:layout_marginLeft="10dp"
+		    android:layout_marginRight="10dp"
+		    android:background="@drawable/item_ico_background"
+		    android:src="@drawable/item_readjokeslife_ico"
+		    />
+		<TextView 
+		        android:layout_width="wrap_content"
+		    	android:layout_height="wrap_content"
+		    	android:layout_toRightOf="@id/item_readjokeslife_ico"
+		    	android:layout_centerVertical="true"
+		    	android:text="@string/item_readjokeslife"/>
+		
+		<ImageView 
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_marginRight="5dp"
+		    android:layout_centerVertical="true"
+		    android:layout_alignParentRight="true"
+		    android:src="@drawable/item_click_abale"
+		    />
+		</RelativeLayout>
+	<RelativeLayout
+	    android:id="@+id/item_setting"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_marginTop="5dp"
+	    android:layout_marginBottom="5dp"
+	    android:background="@drawable/item_background"
+	    android:paddingTop="5dp"
+	    android:paddingBottom="5dp">
+		<ImageView
+		    android:id="@+id/item_setting_ico"
+		    android:layout_width="30dp"
+		    android:layout_height="30dp"
+		    android:layout_marginLeft="10dp"
+		    android:layout_marginRight="10dp"
+		    android:background="@drawable/item_ico_background"
+		    android:src="@drawable/item_setting_ico"
+		    />
+		<TextView 
+		        android:layout_width="wrap_content"
+		    	android:layout_height="wrap_content"
+		    	android:layout_toRightOf="@id/item_setting_ico"
+		    	android:layout_centerVertical="true"
+		    	android:text="设置"/>
+		
+		<ImageView 
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_marginRight="5dp"
+		    android:layout_centerVertical="true"
+		    android:layout_alignParentRight="true"
+		    android:src="@drawable/item_click_abale"
+		    />
+		</RelativeLayout>
 </LinearLayout>
