--- a/res/layout/item_chat_msg_out.xml
+++ b/res/layout/item_chat_msg_out.xml
@@ -39,7 +39,7 @@
 		        android:layout_marginEnd="@dimen/chat_msg_item_content_margin_left_right"
 		        android:autoLink="all"
 		        android:textColorLink="?attr/colorPrimary"
-		        android:linksClickable="true"/>
+		        android:linksClickable="false"/>
             
             <TextView 
                 android:id="@+id/tv_content_desc"
