--- a/res/layout/item_msg_thread.xml
+++ b/res/layout/item_msg_thread.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_thread_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/list_item_padding"
